# falling-nikochan

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  .prettierrc.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG_dev.md  CONTRIBUTING.md  Dockerfile  MIGRATION_SUMMARY.md  README.md  build-multi.js  docker-compose.yml  eslint.config.js  eslint.config.mjs  eslint.config.ts  exportAll.js  initDB.js  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replaceForBun.js  tailwind.config.ts  tsconfig.json  tsconfig.next.json  vercel.json  versionBump.js  vitest.config.ts  woff2sfnt.js  wrangler.json  wrangler.jsonc
.github/: dependabot.yml
api/: index.js  index.ts
app/: aboutTab.tsx  editTab.tsx  fallingWindow.tsx  gameLogic.ts  globals.css  layout.tsx  messageBox.tsx  not-found.tsx  page.tsx  playTab.tsx  rhythmicalSlime.tsx  scale.tsx  score.tsx  statusBox.tsx  youtube.tsx  youtubePlayer.ts
chart/: eslint.config.js  package.json  tsconfig.json
chartFormat/: apiConfig.ts  chart.ts  command.ts  difficulty.ts  dummySamples.ts  seq.ts
frontend/: .babelrc  eslint.config.mjs  global.d.ts  initAssets.js  insertBanner.js  instrumentation-client.ts  license-banner.txt  listStaticFiles.js  mdx-components.tsx  next.config.mjs  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  woff2sfnt.js
i18n/: dynamic.js  eslint.config.js  i18n.ts  index.js  mdx.js  package.json  staticImport.js  staticMin.js  verifyKeys.js
prisma/: schema.prisma
route/: app.ts  (+21 more)
(+654 files in other folders)
